--- a/index.html
+++ b/index.html
@@ -4,81 +4,149 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>スプレッドシート関数チーム利用規約</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .content {
+            width: 80%;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .scrollable-content {
+            max-height: 300px;
+            overflow-y: auto;
+            padding-right: 10px;
+        }
+        button {
+            display: block;
+            width: 100%;
+            padding: 15px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        .skip-button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            background-color: #f44336;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+        .skip-button:hover {
+            background-color: #e53935;
+        }
+    </style>
 </head>
 <body>
-    <h1>スプレッドシート関数チーム利用規約</h1>
-    <p>本利用規約（以下「本規約」といいます。）は、スプレッドシート関数チーム（以下「本チーム」といいます。）のサービスを利用するにあたり、参加者（以下「ユーザー」といいます。）が遵守すべき条件を定めるものです。本チームに参加することで、ユーザーは本規約に同意したものとみなされます。</p>
 
-    <hr>
+    <div class="content" id="terms">
+        <h1>スプレッドシート関数チーム利用規約</h1>
 
-    <h2>第1条 目的</h2>
-    <ol>
-        <li>本チームは、ユーザーがスプレッドシート内で関数を効果的に使用し、データ処理の能力を向上させることを目的とします。</li>
-        <li>ユーザーは、データ分析および関数を駆使した作業を通じて、本チーム内でのスキル向上と共に、最適な成果を上げることを目的とします。</li>
-    </ol>
+        <div class="scrollable-content">
+            <p>本利用規約（以下「本規約」といいます。）は、スプレッドシート関数チーム（以下「本チーム」といいます。）のサービスを利用するにあたり、参加者（以下「ユーザー」といいます。）が遵守すべき条件を定めるものです。本チームに参加することで、ユーザーは本規約に同意したものとみなされます。</p>
 
-    <h2>第2条 参加資格</h2>
-    <ol>
-        <li>本チームへの参加は、ユーザーが本規約に同意した場合に限り、正式に認められます。</li>
-        <li>ユーザーは、スプレッドシートの基本的な操作に熟練していること、ならびにチーム活動に積極的に参加する意欲があることを確認した上で参加します。</li>
-    </ol>
+            <h2>第1条 目的</h2>
+            <ol>
+                <li>本チームは、ユーザーがスプレッドシート内で関数を効果的に使用し、データ処理の能力を向上させることを目的とします。</li>
+                <li>ユーザーは、データ分析および関数を駆使した作業を通じて、本チーム内でのスキル向上と共に、最適な成果を上げることを目的とします。</li>
+            </ol>
 
-    <h2>第3条 責任</h2>
-    <ol>
-        <li>ユーザーは、データの正確性と結果に対する全責任を負うものとします。関数の誤使用や誤ったデータ処理により発生した損害について、本チームは一切責任を負いません。</li>
-        <li>ユーザーが本チームの活動において発生させたすべての問題に関しては、自己責任で対応しなければならないことを理解し、同意するものとします。</li>
-    </ol>
+            <h2>第2条 参加資格</h2>
+            <ol>
+                <li>本チームへの参加は、ユーザーが本規約に同意した場合に限り、正式に認められます。</li>
+                <li>ユーザーは、スプレッドシートの基本的な操作に熟練していること、ならびにチーム活動に積極的に参加する意欲があることを確認した上で参加します。</li>
+            </ol>
 
-    <h2>第4条 チーム内行動</h2>
-    <ol>
-        <li>ユーザーは、本チームの活動において、誠実かつ倫理的な行動を取ることを求められます。</li>
-        <li>チーム内での議論や意見交換は、敬意をもって行われなければならず、他のメンバーを誹謗中傷する行為や不適切な言動は禁止されます。</li>
-    </ol>
+            <h2>第3条 責任</h2>
+            <ol>
+                <li>ユーザーは、データの正確性と結果に対する全責任を負うものとします。関数の誤使用や誤ったデータ処理により発生した損害について、本チームは一切責任を負いません。</li>
+                <li>ユーザーが本チームの活動において発生させたすべての問題に関しては、自己責任で対応しなければならないことを理解し、同意するものとします。</li>
+            </ol>
 
-    <h2>第5条 データの管理</h2>
-    <ol>
-        <li>ユーザーは、スプレッドシート内で取り扱うすべてのデータに対して慎重に管理責任を負うものとし、データの消失、誤処理、不正使用が発生しないよう努めなければなりません。</li>
-        <li>ユーザーは、他のメンバーのデータを無断で変更したり、意図的に破損させる行為をしてはならず、そのような行為が発覚した場合は除名の対象となります。</li>
-    </ol>
+            <h2>第4条 チーム内行動</h2>
+            <ol>
+                <li>ユーザーは、本チームの活動において、誠実かつ倫理的な行動を取ることを求められます。</li>
+                <li>チーム内での議論や意見交換は、敬意をもって行われなければならず、他のメンバーを誹謗中傷する行為や不適切な言動は禁止されます。</li>
+            </ol>
 
-    <h2>第6条 不正行為の禁止</h2>
-    <ol>
-        <li>本チーム内で不正行為（例：関数を不正に使用して成果を隠す、他のユーザーの成果を盗むなど）が発覚した場合、当該ユーザーは即刻除名されることに同意するものとします。</li>
-        <li>不正行為が確認された場合、その結果として生じた損害に対して法的責任を負うことがあります。</li>
-    </ol>
+            <h2>第5条 データの管理</h2>
+            <ol>
+                <li>ユーザーは、スプレッドシート内で取り扱うすべてのデータに対して慎重に管理責任を負うものとし、データの消失、誤処理、不正使用が発生しないよう努めなければなりません。</li>
+                <li>ユーザーは、他のメンバーのデータを無断で変更したり、意図的に破損させる行為をしてはならず、そのような行為が発覚した場合は除名の対象となります。</li>
+            </ol>
 
-    <h2>第7条 規約の変更</h2>
-    <ol>
-        <li>本チームは、本規約を随時変更することがあります。変更があった場合、ユーザーには変更後の規約が通知され、通知後に引き続き本チームを利用することで新たな規約に同意したものとみなされます。</li>
-        <li>規約変更に同意できない場合、ユーザーは即座に本チームの活動から退会することができます。</li>
-    </ol>
+            <h2>第6条 不正行為の禁止</h2>
+            <ol>
+                <li>本チーム内で不正行為（例：関数を不正に使用して成果を隠す、他のユーザーの成果を盗むなど）が発覚した場合、当該ユーザーは即刻除名されることに同意するものとします。</li>
+                <li>不正行為が確認された場合、その結果として生じた損害に対して法的責任を負うことがあります。</li>
+            </ol>
 
-    <h2>第8条 退会</h2>
-    <ol>
-        <li>ユーザーは、自己の意思でいつでも本チームから退会することができます。退会する場合は、全てのデータの責任をユーザー自身で管理し、退会後も他のメンバーに対する責任を負うことを確認します。</li>
-        <li>退会後に、過去に行った作業やデータについての質問、修正依頼を行うことはできません。</li>
-    </ol>
+            <h2>第7条 規約の変更</h2>
+            <ol>
+                <li>本チームは、本規約を随時変更することがあります。変更があった場合、ユーザーには変更後の規約が通知され、通知後に引き続き本チームを利用することで新たな規約に同意したものとみなされます。</li>
+                <li>規約変更に同意できない場合、ユーザーは即座に本チームの活動から退会することができます。</li>
+            </ol>
 
-    <h2>第9条 免責事項</h2>
-    <ol>
-        <li>本チームは、ユーザーがスプレッドシートを使用して得た情報や成果に関して、一切の責任を負いません。</li>
-        <li>本チームが提供するツールやリソースが完全であることを保証するものではなく、予期せぬシステムエラーや不具合による損害についても一切責任を負いません。</li>
-    </ol>
+            <h2>第8条 退会</h2>
+            <ol>
+                <li>ユーザーは、自己の意思でいつでも本チームから退会することができます。退会する場合は、全てのデータの責任をユーザー自身で管理し、退会後も他のメンバーに対する責任を負うことを確認します。</li>
+                <li>退会後に、過去に行った作業やデータについての質問、修正依頼を行うことはできません。</li>
+            </ol>
 
-    <h2>第10条 準拠法</h2>
-    <p>本規約は、日本法に基づいて解釈され、適用されます。万が一、本規約に関連して紛争が発生した場合、日本の裁判所を専属的な管轄裁判所とします。</p>
+            <h2>第9条 免責事項</h2>
+            <ol>
+                <li>本チームは、ユーザーがスプレッドシートを使用して得た情報や成果に関して、一切の責任を負いません。</li>
+                <li>本チームが提供するツールやリソースが完全であることを保証するものではなく、予期せぬシステムエラーや不具合による損害についても一切責任を負いません。</li>
+            </ol>
 
-    <hr>
+            <h2>第10条 準拠法</h2>
+            <p>本規約は、日本法に基づいて解釈され、適用されます。万が一、本規約に関連して紛争が発生した場合、日本の裁判所を専属的な管轄裁判所とします。</p>
+        </div>
 
-    <h2>同意と確認</h2>
-    <p>本チームに参加することにより、ユーザーは上記の規約に同意したものとみなされます。規約に違反した場合、本チームは適切な措置を講じることがあります。</p>
+        <button id="agreeButton">同意する</button>
+        <button id="skipButton" class="skip-button" style="display:none;">利用規約をスキップ</button>
+    </div>
 
-    <hr>
+    <script>
+        // 同意したかをローカルストレージで確認
+        if (localStorage.getItem("agreed") === "true") {
+            // 同意済みなら規約画面をスキップ
+            document.getElementById("terms").style.display = "none";
+        }
 
-    <p>スプレッドシート関数チームに参加することで、ユーザーはその役割と責任を十分に理解し、覚悟を決めて活動を行うものとします。</p>
+        // 同意ボタンをクリックしたときの処理
+        document.getElementById("agreeButton").onclick = function() {
+            localStorage.setItem("agreed", "true");
+            window.location.href = "https://x.gd/Xzm4R";
+        };
 
-    <br>
-    <br>
-    <button onclick="window.location.href='https://x.gd/Xzm4R'">同意する</button>
+        // スキップボタンを表示
+        document.getElementById("skipButton").style.display = "block";
+        document.getElementById("skipButton").onclick = function() {
+            window.location.href = "https://x.gd/Xzm4R";
+        };
+    </script>
+
 </body>
 </html>
+1.1
